2002-09-16 16:43  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m (add_face): Change default rendering hints.

2002-09-16 16:36  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTGState.h, Source/art/ARTContext.m,
	Source/art/image.m, Source/art/composite.m, Source/art/path.m:
	Handle NSBackingStoreNonretained.

2002-09-14 13:39  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Keep track of the family name in FTFaceInfo
	so FTFontInfo can set it correctly.

2002-09-14 13:03  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Add support for some simple rendering hints
	in .nfont packages.

2002-09-12 02:29  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/image.m (_image_get_color_rgb_8,
	_image_get_color_rgb_cmyk_gray): Fix clamping of y.

2002-09-10 22:11  Alexander Malmberg  <alexander@malmberg.org>

	* Headers/x11/XWindowBuffer.h: Add more documentation.

2002-09-10 21:36  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTWindowBuffer.h, Source/art/ARTWindowBuffer.m,
	Source/x11/XWindowBuffer.m, Headers/x11/XWindowBuffer.h: Rename
	ARTWindowBuffer to XWindowBuffer and move it to x11/ so other
	backends can use it. Update many files in Source/art/.

2002-09-10 17:35  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/composite.m: Implement handling of tranformations and
	clipping.

2002-09-08  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerWindow.m ([XGServer
	-_XWinFrameToOSWinFrame:for:]): New.
	([XGServer -_addExposedRectangle::]): Convert rect to OS coords.
	([XGServer -_processExposedRectangles:]): Invalidate exposed
	rects in view. (patch from Frederic De Jaeger).

2002-09-06  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSContext.m (-initWithContextInfo:): Fix
	for GSStreamContext subclass.
	* Source/GSStreamGState.m: New file.
	* Source/GSStreamContext.m: Make a subclass of GSContext.
	Call superclass implementation where appropriate.
