@@ -1,3 +1,8 @@
+2002-09-18 00:36  Alexander Malmberg  <alexander@malmberg.org>
+
+	* Source/art/image.m (-DPSimage:::::::::::): Treat input as
+	pre-multiplied in the common case to (really) match xlib/.
+
 2002-09-16 16:43  Alexander Malmberg  <alexander@malmberg.org>
 
 	* Source/art/ftfont.m (add_face): Change default rendering hints.
